infrastructure/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tailscale-gateway
  namespace: tailscale
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    external-dns.alpha.kubernetes.io/target: gateway-envoy.ainu-herring.ts.net
spec:
  gatewayClassName: tailscale
  listeners:
  - name: https
    protocol: HTTPS
    port: 443
    hostname: "*.sudhanva.me"
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: wildcard-sudhanva-me-tls
