infrastructure/gateway/vault-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault
  namespace: vault
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    external-dns.alpha.kubernetes.io/expose: "true"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
spec:
  parentRefs:
  - name: tailscale-gateway
    namespace: tailscale
    sectionName: https
  hostnames:
  - vault.sudhanva.me
  rules:
  - filters:
    - type: RequestHeaderModifier
      requestHeaderModifier:
        set:
        - name: Connection
          value: close
    - type: ResponseHeaderModifier
      responseHeaderModifier:
        set:
        - name: Connection
          value: close
    backendRefs:
    - name: vault-ui
      port: 8200
